<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APDE</string>
    <string name="title_activity_editor">APDE</string>
    <string name="menu_save">Save Sketch</string>
    <string name="menu_open">Load Sketch</string>
    <string name="menu_export">Export Sketch</string>
    <string name="menu_run">Run</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_new">New Sketch</string>
    <string name="menu_tab_new">New Tab</string>
    <string name="menu_tab_rename">Rename Tab</string>
    <string name="menu_tab_delete">Delete Tab</string>
    <string name="external_storage_dialog_title">External Storage Unavailable</string>
    <string name="external_storage_dialog_message">The sketch cannot be saved because the external storage on your device is either unavailable or unwritable.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="sketch_saved">The sketch has been saved.</string>
    <string name="sketch_save_failure">The sketch has not been saved properly.</string>
    <string name="name_invalid_first_char">Error: Tab names cannot start with a number or an underscore!</string>
    <string name="name_invalid_char">Error: Tab names may contain only A-Z, a-z, numbers and underscores!</string>
    <string name="tab_renamed">The tab has been renamed.</string>
    <string name="tab_created">The tab has been created.</string>
    <string name="tab_deleted">The tab has been deleted.</string>
    <string name="name_invalid_no_char">Error: Tab name must contain text!</string>
    <string name="title_activity_sketch_properties">Sketch Properties</string>
    <string name="action_settings">Settings</string>
    <string name="menu_sketch_properties">Sketch Properties</string>
    
    <string name="delete">Delete</string>
    <string name="delete_dialog_title">Delete tab?</string>
    <string name="delete_dialog_message" >Are you sure you want to delete this tab?</string><string name="ok">OK</string><string name="cancel">Cancel</string>
    <string name="menu_change_sketch_name">Change Sketch Name</string>
    <string name="change_sketch_name_dialog_title">Change Sketch Name</string>
    <string name="change_sketch_name_dialog_message">Enter the new name for the sketch:</string>
    <string name="tab_rename_dialog_title">Rename Tab</string>
    <string name="tab_rename_dialog_message">Enter the new name for the tab:</string>
    <string name="drawer_list_title">Sketchbook</string>
    <string name="nav_drawer_open">Load a Sketch</string>
    <string name="nav_drawer_close">Return to Sketch</string>
    <string name="menu_delete">Delete Sketch</string>
    <string name="save_sketch_dialog_title">Save sketch?</string>
    <string name="save_sketch_dialog_message">Do you want to save the sketch before creating a new sketch?</string>
    <string name="save_sketch">Save</string>
    <string name="dont_save_sketch">Don\'t Save</string>
    <string name="delete_sketch_dialog_title">Delete sketch?</string>
    <string name="delete_sketch_dialog_message">Are you sure you want to delete this sketch?</string>
    <string name="name_invalid_same_title">Error: This tab already exists!</string>
    <string name="tab_new_dialog_title">New tab</string>
    <string name="tab_new_dialog_message">Enter the name for the new tab:</string>
    <string name="sketch_name_dialog_title">Change sketch name</string>
    <string name="sketch_name_dialog_message">Sketch must be renamed before it can be saved.</string>
    

</resources>