<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/sketch_properties"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/activity_background"
	tools:context=".SketchPropertiesActivity"
    android:orientation="vertical">
    
    <include layout="@layout/settings_toolbar" />
	
	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
		
		<fragment
			android:id="@+id/sketch_properties_fragment"
			android:name="com.calsignlabs.apde.SketchPropertiesFragment"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />
	</FrameLayout>
</LinearLayout>